.provarCaches/00D410000011HE0EAM/objects/rstk__icitemprojprice__c.object
<CustomObject>
    <description>icitemprojprice__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__icitemprojprice_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Item Project Prices</relationshipLabel>
        <relationshipName>icitemprojprices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemprojprice_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Item that this Project Price applies to.</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Project Prices</relationshipLabel>
        <relationshipName>icitemprojprices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemprojprice_poprice__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Purchased Price defined for this Inventory Item when purchased for this Project.</inlineHelpText>
        <label>Purchase Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemprojprice_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project for which this Purchase Price applies.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Item Project Prices</relationshipLabel>
        <relationshipName>icitemprojprices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Item Project Price</label>
    <listViews>
        <fullName>rstk__Item_Project_Price</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>rstk__icitemprojprice_div__c</columns>
        <columns>rstk__icitemprojprice_icitem__c</columns>
        <columns>rstk__icitemprojprice_proj__c</columns>
        <columns>rstk__icitemprojprice_poprice__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Item Project Price</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Project Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Project Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__price_not_less_than_zero</fullName>
        <active>true</active>
        <description>Item Project Price cannot be less than 0.</description>
        <errorConditionFormula>AND(NOT(isBLANK(rstk__icitemprojprice_poprice__c)), rstk__icitemprojprice_poprice__c &lt; 0)</errorConditionFormula>
        <errorMessage>Item Project Price cannot be less than 0.</errorMessage>
    </validationRules>
</CustomObject>